build(docker): layered 삭제